--- a/vignettes/developer-guidelines.Rmd
+++ b/vignettes/developer-guidelines.Rmd
@@ -21,16 +21,16 @@ high-level interfaces to Stan, using the __rstan__ package for estimating models
 without requiring that the user be familiar with the Stan modeling language
 itself.
 
-This is a great development and we would like to support such efforts going
+This is a great development and we would like to support such efforts going 
 forward, but to-date we have made little effort to coordinate the development of
-these packages. To avoid a Wild West, so to speak, of Stan-based R packages, we
-think it is important that developers make every effort to adhere to certain
+these packages. To avoid a Wild West, so to speak, of Stan-based R packages, we 
+think it is important that developers make every effort to adhere to certain 
 guidelines in order to ensure these packages are of the highest possible quality
 and provide the best possible experience for users. To that end, in this post we
-present a set of recommendations for the development of R packages that
-interface with Stan. These recommendations are based on software design
-principles we value as well as many things we are learning as we continue
-developing our __rstanarm__ package and review packages being developed by
+present a set of recommendations for the development of R packages that 
+interface with Stan. These recommendations are based on software design 
+principles we value as well as many things we are learning as we continue 
+developing our __rstanarm__ package and review packages being developed by 
 others.
 
 Of course anyone is free to develop a package based on Stan, even if they ignore
@@ -39,8 +39,8 @@ recommendations and because we are seeing an increase in the number of requests
 for help (and our time is unfortunately limited), we will loosely enforce these
 guidelines by 
 
-1. prioritizing giving feedback to developers who follow them
-over those who choose not to, and
+1. prioritizing giving feedback to developers who follow them over those who
+choose not to, and
 2. refraining from promoting packages that ignore them. 
 
 That said, we are open to some limited exceptions (e.g., the __brms__ package is
@@ -52,18 +52,19 @@ package should be an exception definitely let us know.
 
 ### General package structure and development
 
-* The __rstantools__ package provides the `rstan_package_skeleton` function,
-which you should use to create the basic structure of your package. If you have
-trouble setting up your package using `rstan_package_skeleton` please consult
-the [__rstanarm__](https://github.com/stan-dev/__rstanarm__) repository and use it as a
-template and/or ask us for help on the Stan users forum.
+* The __rstantools__ package provides the `rstan_package_skeleton` function, 
+which you should use to create the basic structure of your package. If you have 
+trouble setting up your package using `rstan_package_skeleton` please consult 
+the [__rstanarm__](https://github.com/stan-dev/rstanarm) repository and use it
+as a template and/or ask us for help on the [Stan users 
+group](https://groups.google.com/forum/#!forum/stan-users).
 
 * Use version control (e.g., git).
 
-* Unless you are developing proprietary private software, organize your code in
-a repository that is _public_ on GitHub (or a similar service, but preferably
-GitHub). It should be public even at early stages of development, not only when
-officially released.
+* Unless you are developing proprietary private software, organize your code in 
+a repository that is _public_ on [GitHub](https://github.com/) (or a similar
+service, but preferably GitHub). It should be public even at early stages of
+development, not only when officially released.
 
 * Unit testing is essential. There are several R packages that make it 
 relatively easy to write tests for your package. __rstanarm__ uses the 
@@ -95,7 +96,7 @@ not change depending on actions taken by the user. To provide flexibility to
 users, your Stan programs can include branching logic (conditional statements)
 so that even with a number of .stan files you can still allow for many different
 specifications to made by the user (see .stan files in
-[__rstanarm__](https://github.com/stan-dev/__rstanarm__) for examples).
+[__rstanarm__](https://github.com/stan-dev/rstanarm) for examples).
 
 * Use best practices for Stan code. If the models you intend to implement are
 discussed in the Stan manual or on the Stan users forum then you should follow
@@ -104,20 +105,20 @@ programs can be made more efficient or more numerically stable then please ask
 us on the Stan users forum. Especially ask us if you are unsure whether your
 Stan programs are indeed estimating the intended model.
 
-* Relatedly, prioritize safety over speed in your Stan code and sampler
-settings. For example, if you can write a program that runs faster but is
-potentially less stable, then at a minimum you should make the more stable
-version the default. This also means that, with rare exceptions, you should not
-change our recommended MCMC defaults (e.g. 4 chains, 1000+1000 iterations, NUTS
-not static HMC), unless you are setting the defaults to something more
-conservative. __rstanarm__ even goes one step further, making the default value of
-the `adapt_delta` tuning parameter at least 0.95 for all models (rather than
-__rstan__'s default of 0.8) in order to reduce the step size and therefore also
-limit the potential for divergences. This means that __rstanarm__ models may often
-run a bit slower than they need to if the user doesn't change the defaults, but
-it also means that users face fewer situations in which they need to know how to
-change the defaults and what the implications of changing the defaults really
-are.
+* Relatedly, prioritize safety over speed in your Stan code and sampler 
+settings. For example, if you can write a program that runs faster but is 
+potentially less stable, then at a minimum you should make the more stable 
+version the default. This also means that, with rare exceptions, you should not 
+change our recommended MCMC defaults (e.g. 4 chains, 1000+1000 iterations, NUTS 
+not static HMC), unless you are setting the defaults to something more 
+conservative. __rstanarm__ even goes one step further, making the default value
+of the `adapt_delta` tuning parameter at least 0.95 for all models (rather than 
+__rstan__'s default of 0.8) in order to reduce the step size and therefore also 
+limit the potential for divergences. This means that __rstanarm__ models may
+often run a bit slower than they need to if the user doesn't change the
+defaults, but it also means that users face fewer situations in which they need
+to know how to change the defaults and what the implications of changing the
+defaults really are.
 
 ### R code and documentation
 
@@ -147,7 +148,7 @@ plotting for our R packages (__rstan__, __shinystan__, __rstanarm__) to reduce
 code duplication and provide a core set of plotting functions for MCMC
 diagnostics, posterior predictive checks, and other useful graphical displays
 after fitting Bayesian models (preview development at
-[jgabry/bayesplot](github.com/stan-dev/bayesplot)). We hope developers of
+[stan-dev/bayesplot](github.com/stan-dev/bayesplot)). We hope developers of
 Stan-based R packages will also use it. For any plot you intend to include in
 your package, if it is already available then we recommend using the available
 version or suggesting (or contributing) a better version. If it's not available
@@ -162,7 +163,7 @@ documentation, using decent grammar and actual sentences wherever possible. The
 poor quality of the documentation in many (though certainly not all) R packages
 is insulting to users and an impediment to high quality research. In no way is
 the current state of R package documentation a reason to insufficiently document
-your own package. It is unfortunate that this even needs to be said, but even a
+your own package. It is unfortunate that this needs to be said, but even a
 cursory review of core and contributed R packages immediately reveals the
 necessity for guidelines like this one. Some of our own documentation does not
 always meet this high standard, but we are consistently making efforts to
