--- a/vignettes/developer-guidelines.Rmd
+++ b/vignettes/developer-guidelines.Rmd
@@ -156,27 +156,27 @@ then we're interested in adding it if it's a plot of general use. We will post a
 follow-up soon when this is available, and we welcome your feedback and
 contributions to improve it.
 
-* Provide thorough and clear documentation. The documentation won't be perfect
-(we've found many holes in our __rstanarm__ documentation already and there are
-certainly more), but you should make every effort to provide clear and thorough
-documentation, using decent grammar and actual sentences wherever possible. The
-poor quality of the documentation in many (though certainly not all) R packages
-is insulting to users and an impediment to high quality research. In no way is
+* Provide thorough and clear documentation. The documentation won't be perfect 
+(we've found many holes in our __rstanarm__ documentation already and there are 
+certainly more), but you should make every effort to provide clear and thorough 
+documentation, using decent grammar and actual sentences wherever possible. The 
+poor quality of the documentation in many (though certainly not all) R packages 
+is insulting to users and an impediment to high quality research. In no way is 
 the current state of R package documentation a reason to insufficiently document
-your own package. It is unfortunate that this needs to be said, but even a
-cursory review of core and contributed R packages immediately reveals the
-necessity for guidelines like this one. Some of our own documentation does not
-always meet this high standard, but we are consistently making efforts to
+your own package. It is unfortunate that this needs to be said, but even a 
+cursory review of core and contributed R packages immediately reveals the 
+necessity for guidelines like this one. Some of our own documentation does not 
+always meet this high standard, but we are consistently making efforts to 
 improve this.
 
 
 ### Recommended resources
 
-* Hadley Wickam's [book on R packages](http://r-pkgs.had.co.nz/). If you are 
+* Hadley Wickham's [book on R packages](http://r-pkgs.had.co.nz/). If you are 
 interested in developing an R package that interfaces with Stan but are not an 
 experienced package developer, we recommend Hadley's book, which is free to read
-online. Even if you are an experienced developer of R pacakges, Hadley's book is
-still a good resource.
+online. Even if you are an experienced developer of R packages, Hadley's book is
+still a great resource.
 
 * If you need help setting up your package or have questions about these
 guidelines the best places to go are the [Stan users
@@ -188,7 +188,7 @@ package.
 ## Concluding remarks
 
 These guidelines are not set in stone. We expect them to evolve and we very much
-appreciate comments or suggestions for how they can be improved. And, of course,
-we look forward to seeing the packages you develop using Stan!
+appreciate feedback on how they can be improved. And, of course, we look forward
+to seeing the packages you develop using Stan!
 
 -- The Stan Development Team
