Update R code in vignette to use syntax highlighting

--- a/vignettes/developer-guidelines.Rmd
+++ b/vignettes/developer-guidelines.Rmd
@@ -69,11 +69,13 @@ your README file on how to install the development version of your package, like
 in the [__rstanarm__
 README](https://github.com/stan-dev/rstanarm#development-version):
 
-        if (!require(devtools)) {
-          install.packages("devtools")
-          library(devtools)
-        }
-        install_github("stan-dev/rstanarm", args = "--preclean", build_vignettes = FALSE)
+```{r, eval=FALSE}
+if (!require("devtools")) {
+  install.packages("devtools")
+  library("devtools")
+}
+install_github("stan-dev/rstanarm", args = "--preclean", build_vignettes = FALSE)
+```
 
 * Unit testing is essential. There are several R packages that make it 
 relatively easy to write tests for your package. __rstanarm__ uses the 
